--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "jsdoc": "^3.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
